Resolves: tdf#108413 yet some more TYPEDITEMLIST property entries

... which apparently need to be present to be able to override them. You
also can have never enough macro names to obfuscate things for grep..

Change-Id: Ic0bdcb71682136a537b3ce1c564f02f686f1ee9e