forms/source/component/ComboBox.cxx
@@ -296,13 +296,14 @@ sal_Bool OComboBoxModel::convertFastPropertyValue(
 
 void OComboBoxModel::describeFixedProperties( Sequence< Property >& _rProps ) const
 {
-    BEGIN_DESCRIBE_PROPERTIES( 6, OBoundControlModel )
+    BEGIN_DESCRIBE_PROPERTIES( 7, OBoundControlModel )
         DECL_PROP1(TABINDEX,            sal_Int16,                  BOUND);
         DECL_PROP1(LISTSOURCETYPE,      ListSourceType, BOUND);
         DECL_PROP1(LISTSOURCE,          OUString,            BOUND);
         DECL_BOOL_PROP1(EMPTY_IS_NULL,                              BOUND);
         DECL_PROP1(DEFAULT_TEXT,        OUString,            BOUND);
         DECL_PROP1(STRINGITEMLIST,      Sequence< OUString >,BOUND);
+        DECL_PROP1(TYPEDITEMLIST,       Sequence< Any >,        BOUND);
     END_DESCRIBE_PROPERTIES();
 }
 
